# rlm-tools-bsl

./: .dockerignore  .env.docker.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  README_rlm_tools.md  docker-compose.dev.yml  docker-compose.yml  example.mcp-docker.json  pyproject.toml  reinstall-service.ps1  simple-install-from-pip.ps1  simple-install.ps1  simple-install.sh  test-docker.ps1  test-docker.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DOCKER.md  ENV_REFERENCE.md  HELPERS.md  INDEXING.md  INSTALL.md  PROJECT_REGISTRY.md  QUICKSTART.md  full_analysis_prompt.md
evals/: test_comparative.py
src/rlm_tools_bsl/: _config.py  _service_win.py  bsl_helpers.py  bsl_index.py  bsl_knowledge.py  bsl_xml_parsers.py  cache.py  cli.py  extension_detector.py  format_detector.py  helpers.py  llm_bridge.py  projects.py  sandbox.py  server.py  session.py
tests/: conftest.py  test_bsl_helpers.py  test_bsl_index.py  test_bsl_index_integration.py  test_bsl_knowledge.py  test_cli.py  test_config.py  test_extension_detector.py  test_extension_overrides.py  test_file_paths.py  test_form_parsers.py  test_format_detector.py  test_git_delta.py  test_helpers.py  test_llm_bridge.py  test_object_synonyms.py  test_projects.py  test_regions_headers.py  test_server.py  test_session.py  test_strategy_examples.py
