[project]
name = "rlm-tools-bsl"
version = "0.1.0"
description = "MCP server for token-efficient 1C BSL codebase analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "anthropic>=0.40.0",
]

[project.scripts]
rlm-tools-bsl = "rlm_tools_bsl.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_tools_bsl"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/stefanoshea/rlm-tools"
Repository = "https://github.com/stefanoshea/rlm-tools"
Issues = "https://github.com/stefanoshea/rlm-tools/issues"
# Fork: rlm-tools-bsl adapted for 1C BSL codebase analysis
