[project]
name = "rlm-tools-bsl"
version = "1.3.0"
description = "MCP server for token-efficient 1C BSL codebase analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Dach-Coin" },
]
keywords = ["1c", "bsl", "mcp", "code-analysis", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
rlm-tools-bsl = "rlm_tools_bsl.server:main"
rlm-bsl-index = "rlm_tools_bsl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_tools_bsl"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
service = [
    "pywin32>=306; sys_platform == 'win32'",
]

[tool.pytest.ini_options]
pythonpath = ["tests"]

[project.urls]
Homepage = "https://github.com/Dach-Coin/rlm-tools-bsl"
Repository = "https://github.com/Dach-Coin/rlm-tools-bsl"
Issues = "https://github.com/Dach-Coin/rlm-tools-bsl/issues"
